# LearningOpenGL

./: CMakeLists.txt  Figure.cpp  Figure.h  README.md  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  glad.c  main.cpp  stb_image.cpp
shaders/: frag.glsl
